Adjust NAV font to be lighter. Adjust iPad spacing on NAV to make sure that active states are not cut off.

--- a/wp-content/themes/hmr-theme/assets/css/less/bootstrap/navs.less
+++ b/wp-content/themes/hmr-theme/assets/css/less/bootstrap/navs.less
@@ -32,7 +32,7 @@
   display:inline-block;
   vertical-align:middle;
   color:@white;
-  font-family:'Circe-Regular',sans-serif;
+  font-family:'Circe-Light',sans-serif;
   text-transform:uppercase;
   font-size:20px;
   line-height:1.2;
@@ -231,7 +231,6 @@
 
   .nav > li { 
     a {
-      padding:15px 15px 11px 15px;
       font-size:19px;
       &:hover {
         background:none !important;
@@ -239,19 +238,19 @@
       }
     }
     &.menu-hmr {
-      margin-right:27px;
-    }
-    &.menu-service {
       margin-right:17px;
     }
+    &.menu-service {
+      margin-right:7px;
+    }
     &.menu-portfolio { 
-      margin-right:27px;
+      margin-right:17px;
     }
     &.menu-blog {
-      margin-right:27px;
+      margin-right:17px;
     }
     &.menu-press {
-      margin-right:30px;
+      margin-right:20px;
     }
   }
 
